uptrace/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: uptrace-grpc-ingress
  namespace: uptrace
spec:
  ingressClassName: nginx
  rules:
  - host: uptrace-grpc.gptmgmt.cloudnative.nvdlab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptrace
            port:
              number: 14317
  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name grpctest.dev.mydomain.com
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: uptrace-grpc-tls
    hosts:
      - uptrace-grpc.gptmgmt.cloudnative.nvdlab.net
